# sortringHomework

./: CMakeLists.txt  README.md  _build.sh  _generate.sh  result2.odt  result3.odt
data/: names.txt  patronymics.txt
patterns/: CMakeLists.txt  result6.odt  result7.odt
patterns/chain-src/: chain.cpp  chain.hpp  main.cpp
patterns/logger-src/: logger.cpp  logger.hpp  main.cpp  singleton.hpp
src/: chitest.cpp  chitest.hpp  comparator.cpp  find.hpp  finder.cpp  flat.cpp  flat.hpp  flat_h.cpp  flat_h.hpp  generator.cpp  hash_table.cpp  hash_table.hpp  hasher.cpp  lcm.cpp  lcm.hpp  listNamer.cpp  listNamer.hpp  main.cpp  markovChain.hpp  prng.cpp  sorts.hpp  xorshift.cpp  xorshift.h  xorshift.hpp
